# fhirflat

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
autofhir/: pyproject.toml  requirements.txt
autofhir/.streamlit/: config.toml
autofhir/autofhir/: csv_mapping.py  util.py
autofhir/autofhir/config/: ARCH.toml  redcap-en.toml
autofhir/graphics/: example_obs.csv  example_patient.csv  home.py
autofhir/graphics/pages/: 1-fhir.py  2-map-tf-idf.py  3-map-gpt.py
docs/howto/: conversion-data.md
fhirflat/: __init__.py  __main__.py  fhir2flat.py  flat2fhir.py  ingest.py  util.py
fhirflat/resources/: __init__.py  base.py  condition.py  diagnosticreport.py  encounter.py  extension_types.py  extension_validators.py  extensions.py  immunization.py  location.py  medicationadministration.py  medicationstatement.py  observation.py  organization.py  patient.py  procedure.py  researchsubject.py  specimen.py
fhirflat/schemas/: condition.json  patient.json
tests/: conftest.py  test_base.py  test_condition_resource.py  test_diagnosticreport_resource.py  test_encounter_resource.py  test_extensions.py  test_fhir2flat_units.py  test_flat2fhir_units.py  test_immunization_resource.py  test_ingest.py  test_medicationadministration_resource.py  test_medicationstatement_resource.py  test_observation_resource.py  test_procedure_resource.py  test_utils.py
tests/data/: condition_flat.parquet  diagnosticreport_flat.parquet  immunization_flat.parquet
tests/dummy_data/: combined_dummy_data_parquet_error.csv
tests/fixtures/: extensions.py
(+3 files in other folders)
